# bril-hs

./: .add.json.swp  .gitignore  README.md  README.txt  add.json  bril-hs.cabal  brili  output.json  test.json
ReachingDefinitionstests/: gcd.bril  gcd.out  turnt.toml
Setuptests/: div.out  jmp.out  ret.out  tiny.out  turnt.toml
Tcdetests/: diamond.bril  diamond.out  turnt.toml
lesson2tests/: br.out  div.out  jmp.out  ret.out  tiny.out
lesson3tests/: turnt.toml
src/: #Dataflow.hs#  .Bril.hs.swp  .Main.hs.swp  Bril.hs  Cfg.hs  Dataflow.hs  Lesson2.hs  Lesson3.hs  Main.hs  ReachingDefinitions.hs  ReachingDefinitions.hs~  Setup.hs  Tcde.hs
test2/: turnt.toml
