name:                bril-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bril-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Artjom Plaunov
maintainer:          example@example.com
copyright:           2022 Artjom Plaunov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     src
  exposed-modules:    Bril, Cfg
  default-language:   Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers    

executable lesson2
  hs-source-dirs:      src
  main-is:             Lesson2.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Lesson2
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers

executable lesson3
  hs-source-dirs:      src
  main-is:             Lesson3.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Lesson3
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers

executable reachingDefinitions
  hs-source-dirs:      src
  main-is:             ReachingDefinitions.hs
  default-language:    Haskell2010
  ghc-options:         -main-is ReachingDefinitions
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers
