name:                bril-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bril-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Artjom Plaunov
maintainer:          example@example.com
copyright:           2022 Artjom Plaunov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     src
  exposed-modules:    Bril, Cfg
  default-language:   Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers    

executable setup
  hs-source-dirs:      src
  main-is:             Setup.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Setup
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers

executable tcde
  hs-source-dirs:      src
  main-is:             Tcde.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Tcde
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers

executable reachingDefinitions
  hs-source-dirs:      src
  main-is:             ReachingDefinitions.hs
  default-language:    Haskell2010
  ghc-options:         -main-is ReachingDefinitions
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers

executable Dataflow
  hs-source-dirs:      src
  main-is:             Dataflow.hs
  default-language:    Haskell2010
  ghc-options:         -main-is Dataflow
  build-depends:       base >= 4.7 && < 5
                     , aeson 
                     , text
                     , bytestring
                     , scientific
                     , containers
